Fix column alignment and copy functionality

--- a/src/app/my-appliances/components/deployments/deployment/deployment.component.css
+++ b/src/app/my-appliances/components/deployments/deployment/deployment.component.css
@@ -14,13 +14,13 @@
 }
 
 .pill {
-  padding: 8px 10px;
+  padding: 0px 4px;
 }
 
 .dim {
   color: darkgray;
 }
 
-.infodata {
+/* .infodata {
   padding-top: 25px;
-}
+} */
